--- a/style.css
+++ b/style.css
@@ -15,3 +15,50 @@ Mobil   0 - 539px
 Tablet  540px - 959px (čti jako 540px a víc)
 PC      960px a víc
 */
+
+.nadpis {
+	text-align: center;
+}
+
+.karta {
+	border: rgb(228, 228, 228) solid 1px;
+	border-radius: 10px;
+	margin: 10px;
+	padding: 10px;
+	text-align: center;
+	box-shadow: 2px 2px 2px rgb(235, 235, 235);
+}
+
+.fotka img {
+	border-radius: 100px;
+	margin: 10px;
+}
+
+@media screen and (min-width: 540px) {
+	.kontejner {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	
+	.karta {
+		flex: 1 1 calc((100% - 40px) / 2);
+		display: flex;
+		text-align: left;
+		align-items: center;
+	}
+
+}
+
+
+@media screen and (min-width: 960px) {
+	.kontejner {
+		flex-wrap: nowrap;
+	}
+	
+	.karta {
+		display: block;
+		text-align: center;
+	}
+}
+
+	
